fixed jumping participant table

--- a/app/assets/stylesheets/modules/_tables.styl
+++ b/app/assets/stylesheets/modules/_tables.styl
@@ -5,7 +5,7 @@
         width 20%
 
   .floatingHeader
-    position fixed
+    position sticky
     top 50px
     background-color white
     z-index 2
